--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="col-lg-6">
                   <ul>                    
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>m.nuhrija99@gmail.com</span></li>                    
-                    <li><i class="bi bi-chevron-right"></i> <strong>Hobby:</strong> <span>Futsal, Swimming, Tracking</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Hobby:</strong> <span>Futsal, Swimming, Travelling</span></li>
                   </ul>
                 </div>
               </div>              
