--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                 <h5>Feb 2019 – Feb 2020</h5>
                 <p><em>UKM SPORT CORNER FP UB – Malang, Indonesia	 </em></p>
                 <ul>
-                  <li>Led and Directed 37 staff consisting of 6 divisions such as public relations, Multimedia, Basketball, Futsal and more.</li>
-                  <li>Evaluated the performance of each division head for each work program that has been and will be implemented. Each division has 3-6 work programs in one period where at the end of the period evaluation and accountability are carried out</li>
-                  <li>Supported for faculty contingents to participate in sports competitions such as the Brawijaya Olympiad and assisted in the process of external relations.</li>
+                  <li>Lead and direct  37 staff consisting of 6 divisions such as public relations, Multimedia, Basketball, Futsal and more.</li>
+                  <li>Evaluating the performance of each division head for each work program that has been and will be implemented. Each division has 3-6 work programs in one period where at the end of the period evaluation and accountability are carried out</li>
+                  <li>Support for faculty contingents to participate in sports competitions such as the Brawijaya Olympiad and assisted in the process of external relations.</li>
                 </ul>
               </div>
               <div class="resume-item">
@@ -206,9 +206,9 @@
                 <h5>Feb 2018 – Feb 2019</h5>
                 <p><em>UKM SPORT CORNER FP UB - Malang, Indonesia	</em></p>
                 <ul>
-                  <li>Collaborated with other divisions to determine work programs in the field of sports and also assist the faculty in organizing activities with student exchange</li>
-                  <li>Planned training programs for athletes in preparation for competitions.</li>
-                  <li>Completed the division accountability report to be reported at the year-end session.</li>
+                  <li>Collaborate with other divisions to determine work programs in the field of sports and also assist the faculty in organizing activities with student exchange</li>
+                  <li>Plan training programs for athletes in preparation for competitions.</li>
+                  <li>Complete the division accountability report to be reported at the year-end session.</li>
                 </ul>
               </div>
             </div>
@@ -219,8 +219,8 @@
                 <h5>Mar 2019 – Mar 2020</h5>
                 <p><em>EARTH HOUR MALANG – Malang, Indonesia</em></p>
                 <ul>
-                  <li>Designed and Published attractive multimedia content according to campaign needs such as Instagram Feeds and story.</li>
-                  <li>Supported other divisions complete tasks such as talkshow and city campaign. </li>
+                  <li>Design and publish  attractive multimedia content according to campaign needs such as Instagram Feeds and story.</li>
+                  <li>Support other divisions complete tasks such as talkshow and city campaign. </li>
                 </ul>
               </div>
               <div class="resume-item">
@@ -228,9 +228,9 @@
                 <h5>Mar 2019 – Sep 2019</h5>
                 <p><em>RAJA BRAWIJAYA 2019 – Malang, Indonesia </em></p>
                 <ul>
-                  <li>Led and Directed staff of 40 people with a division of tasks for 5 event venues at the same time for 15.000 participant. </li>
-                  <li>Organized and scheduled the readiness of the event venue as well as the need for equipment for each simulation process to implementation every week.</li>
-                  <li>Calculated the budget costs of activities such as stage, sound system and other supporting equipment in consultation with the treasurer with a total budget of hundreds of millions of rupiah.</li>
+                  <li>Lead and direct  staff of 40 people with a division of tasks for 5 event venues at the same time for 15.000 participant. </li>
+                  <li>Organizing and scheduling  the readiness of the event venue as well as the need for equipment for each simulation process to implementation every week.</li>
+                  <li>Calculating the budget costs of activities such as stage, sound system and other supporting equipment in consultation with the treasurer with a total budget of hundreds of millions of rupiah.</li>
                 </ul>
               </div>
               <div class="resume-item">
@@ -238,8 +238,8 @@
                 <h5>Mar 2018 – Oct 2018</h5>
                 <p><em>POSTER FP UB 2018 - Malang, Indonesia</em></p>
                 <ul>
-                  <li>Assisted the division head to arrange the layout of the event room which will be held for 3 days with a total of almost 1000 participants.</li>
-                  <li>responsible for the loading in and loading out process carried out by the vendor and ensuring the goods are in accordance with the plan</li>
+                  <li>Assist the division head to arrange the layout of the event room which will be held for 3 days with a total of almost 1000 participants.</li>
+                  <li>Responsible for the loading in and loading out process carried out by the vendor and ensuring the goods are in accordance with the plan</li>
                 </ul>
               </div>
             </div>
