menambahkan porto tableau

--- a/index.html
+++ b/index.html
@@ -293,6 +293,15 @@
                 </div>
               </div>
             </div>
+            
+            <div class="col-lg-4 col-md-6 portfolio-item filter-tableau">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="" />
+                <div class="portfolio-links">                  
+                  <a href="https://public.tableau.com/app/profile/muhammad.nuhrija/viz/RWFD-Consumercomplaint/FCOVERVIEW" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-webscrapping">
               <div class="portfolio-wrap">
