--- a/index.html
+++ b/index.html
@@ -303,6 +303,15 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item filter-tableau">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="" />
+                <div class="portfolio-links">                  
+                  <a href="https://public.tableau.com/app/profile/muhammad.nuhrija/viz/RWFD-CallCenter_16412205318800/Dashboard1" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-webscrapping">
               <div class="portfolio-wrap">
                 <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="" />
